--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,8 +10,8 @@ main:
   - name: News
     url: post
     weight: 20
-  - name: People
-    url: people
+  - name: Team
+    url: team
     weight: 30
   - name: Events
     url: event
@@ -25,7 +25,8 @@ main:
   - name: Research
     url: research
     weight: 70
-  - name: Authors
-    url: authors
+  - name: Datasets
+    url: datasets
     weight: 80
+
 
